# talisman-desktop-

./: .gitignore  CONTRIBUTING.md  Dockerfile.railway  LICENSE  README.md  SECURITY.md  docker-compose.yml  railway.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 820a22f88985_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: assistant.py  auth.py  credit.py  deps.py  nlp.py  products.py  public.py  transactions.py
backend/app/models/: __init__.py  base.py  credit.py  product.py  report.py  transaction.py  vendor.py
backend/app/schemas/: auth.py  credit.py  product.py  transaction.py
backend/app/services/: moncash.py  nlp.py  sms.py
backend/app/tasks/: celery_app.py  pricing.py  reminders.py  reports.py  sms.py
backend/app/utils/: csrf.py  headers.py  logging.py  request_guard.py  sanitize.py  security.py
backend/static/: swagger-init.js
backend/tests/: conftest.py  helpers.py  test_auth.py  test_nlp.py  test_products.py  test_security.py  test_tasks.py  test_transactions.py
desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
desktop/dist-electron/: database.js  database.js.map  exporter.js  exporter.js.map  ipc-handlers.js  ipc-handlers.js.map  main.js  (+11 more)
docs/: api.md  architecture.docx  prompt_templates.docx
frontend/: Dockerfile  README.md  capacitor.config.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
(+134 files in other folders)
